third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-msrv/transmute-ref-src-not-asbytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-ref-src-not-asbytes.rs:18:33
   |
18 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&NotZerocopy(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy<AU16>`
   |
note: required by a bound in `AssertIsAsBytes`
  --> tests/ui-msrv/transmute-ref-src-not-asbytes.rs:18:33
   |
18 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&NotZerocopy(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsAsBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy<AU16>: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-ref-src-not-asbytes.rs:18:33
   |
18 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&NotZerocopy(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy<AU16>`
   |
note: required by a bound in `AssertIsAsBytes`
  --> tests/ui-msrv/transmute-ref-src-not-asbytes.rs:18:33
   |
18 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&NotZerocopy(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsAsBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
